force-app/main/default/objects/Opp_Snapshot_POS__c/Opp_Snapshot_POS__c.object-meta.xml
<CustomObject>
    <description>Made for Reporting Snapshot for PS-POS MDM opportunity dashboard</description>
    <label>Opp Snapshot POS</label>
    <nameField>
        <displayFormat>OS-POS-{YYYY}-{MM}-{000000}</displayFormat>
        <label>Opp Snapshot POS Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opp Snapshot POS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>