force-app/main/default/objects/Opp_Snapshot_POS__c/fields/Application_Type__c.field-meta.xml
<CustomField>
    <fullName>Application_Type__c</fullName>
    <label>Application Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>