force-app/main/default/objects/Opp_Snapshot_POS__c/fields/Contribution__c.field-meta.xml
<CustomField>
    <fullName>Contribution__c</fullName>
    <label>Contribution</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>