force-app/main/default/objects/Opp_Snapshot_POS__c/fields/Opp_Count__c.field-meta.xml
<CustomField>
    <fullName>Opp_Count__c</fullName>
    <label>Opp Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>