force-app/main/default/objects/Opp_Snapshot_POS__c/fields/Run_Date__c.field-meta.xml
<CustomField>
    <fullName>Run_Date__c</fullName>
    <label>Run Date</label>
    <type>Date</type>
</CustomField>